--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
             <scope>system</scope>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.simpleclans</groupId>-->
+<!--            <artifactId>SimpleClans</artifactId>-->
+<!--            <version>2.0</version>-->
+<!--            <systemPath>${project.basedir}/libs/SimpleClans.jar</systemPath>-->
+<!--            <scope>system</scope>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
