--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,18 @@
         <authorWebsite>https://arthuramorim.com</authorWebsite>
         <mainClass>com.arthuramorim.TresheTanker</mainClass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
         </plugins>
@@ -61,13 +63,21 @@
             <scope>system</scope>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.simpleclans</groupId>-->
-<!--            <artifactId>SimpleClans</artifactId>-->
-<!--            <version>2.0</version>-->
-<!--            <systemPath>${project.basedir}/libs/SimpleClans.jar</systemPath>-->
-<!--            <scope>system</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.simpleclans</groupId>
+            <artifactId>SimpleClans</artifactId>
+            <version>2.0</version>
+            <systemPath>${project.basedir}/libs/SimpleClans.jar</systemPath>
+            <scope>system</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.legendchat</groupId>
+            <artifactId>Legenchat</artifactId>
+            <version>2.0</version>
+            <systemPath>${project.basedir}/libs/LegendChat.jar</systemPath>
+            <scope>system</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
