--- a/src/main/resources/eventConfig.yml
+++ b/src/main/resources/eventConfig.yml
@@ -1,8 +1,20 @@
+## Evento Tanker
+#
+#Desenvolvido por: Arthur Amorim
+#Discord: Arthur Amorim#9378
+#Versao do plugin: 1.0
+#
+#Suporte para SimpleClans e legendChat"
+#para usar a tag no legenchat colocar {tanker} na configuracao default
+#
+
+
 maxPlayer: 5
-minStart: 0
-priceAcess: 10000
+minStart: 2
+priceAcess: 1
 announcer: 2
 timerAnnouncer: 10
+tag: "&d[Tanker]"
 
 cabin:
   world: "world"
@@ -18,22 +30,36 @@ arena:
 set:
   helmet:
     id: 302
+    data: 0
+    enchantList:
+      - 'DURABILITY,1'
   armor:
     id: 303
+    data: 0
+    enchantList:
+      - 'DURABILITY,1'
   legs:
     id: 304
+    data: 0
+    enchantList:
+      - 'DURABILITY,1'
   boots:
     id: 305
+    data: 0
+    enchantList:
+      - 'DURABILITY,1'
+  weapon:
+    id: 272
+    data: 0
+    enchantList:
+      - 'FIRE_ASPECT,1'
+      - 'DURABILITY,1'
 
 items:
   1:
-    id: 272
-    data: 0
-    quantity: 1
-  2:
     id: 322
     data: 0
-    quantity: 16
+    quantity: 1
 
 reward:
   coins: 1000
@@ -51,3 +77,30 @@ reward:
         - 'FIRE_ASPECT,1'
       lore:
         - '&bRecompensa do evento tanker'
+    2:
+      id: 1
+      data: 0
+      name: "Pedra Tanker"
+      quantity: 64
+      enchantList: []
+      lore: []
+
+messages:
+  canceled: "&cEvento cancelado por um staff"
+  not_have_min: "&cEvento cancelado por nao atingir o minimo de participantes."
+  not_started: "&cEvento nao iniciado"
+  start: "&aEvento iniciado, que o melhor participante vença"
+  close: "&eEvento fechado, participantes se preparem!"
+  join_event: "&aVoce agora esta participando do evento! Aguarde o teleport."
+  leave_event: "&cVoce saiu do evento."
+  removed_from_event: "&cVoce foi removido do evento por estar com itens no seu inventario"
+  items_in_inv: "&cVoce nao pode entrar no evento com items no inventario"
+  not_have_money: "&cVoce nao tem coins suficientes para entrar no evento"
+  winner: "&aO jogador %player% venceu o evento!"
+  is_participant: "&eVocê ja esta participando do evento"
+  is_started: "&aO evento ja foi iniciado"
+  not_have_permission: "&cVoce nao tem permissao"
+  max_participants: "&cO evento atingiu o limite de participantes."
+  elimined: "&eVoce foi eliminado por %killer%"
+
+lastWinner: "TheArthur"
